--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,7 +23,7 @@ body {
   padding: 0 !important;
   overflow-x: hidden;
   font-family: 'Leto', sans-serif;
-  background-image: url("../assets/images/ps.jpg");
+  background-image: url("../assets/images/2754788.jpg");
   background-size: cover;
   background-attachment: fixed;
 
